# deepstream-app-rs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  docker-compose.yml  run.sh
config/: pipeline_config.yml
config/filters/: msgbroker_config.txt  pgie_config.txt
deepstream/: Cargo.toml
deepstream-sys/: Cargo.toml  build.rs
deepstream-sys/src/: gst_nvdsmeta.rs  lib.rs  nvds_roi_meta.rs  nvdsmeta.rs  nvdsmeta_schema.rs  nvll_osd_struct.rs
deepstream/src/: events.rs  gst_meta.rs  lib.rs  meta.rs  meta_schema.rs
gst-plugins/gst-nvobjconv/: Makefile  gstnvobjconv.c  gstnvobjconv.h
includes/: nvdsmeta_custom_schema.h
libs/gst-nvobjconv/: Cargo.toml  Makefile  README.md
libs/gst-nvobjconv/src/: lib.rs
libs/gst-nvobjconv/src/nvobjconv/: imp.rs  mod.rs
libs/libnvdsinfer_custom_bbox_tiny_yolo/: Makefile  nvdsparsebbox_tiny_yolo.cpp
libs/nvdsinfer_custom_impl_yolox/: Makefile  nvdsparsebbox_yolox.cpp
libs/nvmsgconv/: Cargo.toml  Makefile  nvmsgconv.cpp  nvmsgconv.h
libs/nvmsgconv/src/: lib.rs  message.rs  nvdsmeta_custom_schema.rs
src/: common.rs  lib.rs  logging.rs  main.rs
src/pipeline/: common.rs  config.rs  mod.rs  pipeline.rs  sources.rs
src/pipeline/filters/: mod.rs  nvinfer.rs  tracker.rs
src/pipeline/metrics/: fps.rs  mod.rs
src/pipeline/sinks/: mod.rs  msg_broker.rs  render_sink.rs  rtsp_sink.rs
src/pipeline/sources/: base_source.rs  mod.rs  rtsp_source.rs  test_source.rs  uri_source.rs
src/pipeline_manager/: mod.rs
src/test/: mod.rs
