[package]
name = "deepstream-rs"
version = "0.1.0"
edition = "2018"

[dependencies]
glib = "0.14.2"
gst = { version = "0.17.2", package = "gstreamer" }
gst-rtsp-server = { version = "0.17.2", package = "gstreamer-rtsp-server" }
anyhow = "1.0"
derive_more = "0.99.5"
env_logger = "0.9"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.19"
state = { version = "0.5.2", features = ["tls"] }

[[bin]]
name = "deepstream-rs"
path = "src/main.rs"
