[package]
name = "gst-nvobjconv"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Rodrigom96/deepstream-app-rs"
description = "Rust Deepstream-rs Plugin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gst = { version = "0.17.2", package = "gstreamer" }
gst-base = { version = "0.17.2", package = "gstreamer-base" }
deepstream = { path = "../../deepstream" }
once_cell = "1.0"

[lib]
name = "gstnvobjconv"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = "0.7.3"
